make side bar fixed to move with scroll, shift icons down

--- a/portfolio/src/Styles/nav-bar.scss
+++ b/portfolio/src/Styles/nav-bar.scss
@@ -1,8 +1,9 @@
 .nav-bar {
   width: 60px;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
+  left: 0;
   z-index: 3;
   min-height: 500px;
 
@@ -12,7 +13,7 @@
     position: absolute;
     height: 210px;
     top: 50%;
-    margin-top: -120px;
+    margin-top: -50px;
     width: 100%;
 
     a {
